name:                scotty-todo
version:             0.0.1
synopsis:            todo app using scotty
homepage:            https://github.com/minamijoyo/scotty-todo
license:             MIT
author:              minamijoyo
maintainer:          minamijoyo@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable scotty-todo
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base ==4.7.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , persistent-template ==1.3.*
                     , persistent-sqlite ==1.3.*
                     , persistent-postgresql ==1.3.*
                     , monad-logger ==0.3.*
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
